[package]
name = "choice"
version = "0.0.0"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
license = "MIT"
edition = "2018"

description = "Similar to `either` but supports an unbounded number of variants."
repository = "https://github.com/jonnadal/choice"
readme = "README.md"
categories = ["data-structures", "mathematics", "rust-patterns"]
keywords = ["coproduct", "either", "sum", "union", "variant"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[package.metadata.docs.rs]
features = ["serde"]
